--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/ChatApp
+MONGO_URI=mongodb+srv://iqraf683:GvfmrFhug_52dXf@cluster0.kivey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=9000
 JWT_SECRET= wjbhdushdlskdhsjkckl
