--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT = 9000
+MONGO_URI=mongodb+srv://iqraf683:GvfmrFhug_52dXf@cluster0.kivey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=9000
+JWT_SECRET= wjbhdushdlskdhsjkckl
